# carron

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: design.md  planner.md
src/carron/: cli.py  main.py
src/carron/.github/workflows/: ci.yml
src/carron/adapters/python/: adapter.py
src/carron/core/: naming.py  types.py  workflow.py
src/carron/forges/diff/: forge.py
src/carron/forges/prop/: forge.py
src/carron/interfaces/: adapter.py  forge.py  llm.py
src/carron/planner/: heuristic.py
src/carron/runner/: pytest_runner.py
tests/: test_cli.py  test_smoke.py
